--- a/sass/templates/_footer.sass
+++ b/sass/templates/_footer.sass
@@ -81,6 +81,9 @@
   &__link
     text-decoration: none
     color: inherit
+    &-tel
+      &_m
+        padding-left: 10px
   &__input
     width: 100%
     &-group
